feat(server/api): added episodeTitle parameter to result
